<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp"
        android:text="@string/numero1"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        android:layout_alignRight="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="91dp"
        android:text="@string/numero2"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="93dp"
        android:text="@string/signoMas"
        android:textSize="30dp"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/txtRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="211dp"
        android:ems="10"
        android:inputType="textPersonName"

        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="100dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtRespuesta"

        android:layout_marginBottom="3dp"
        android:text="@string/respuesta"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="151dp" />

    <Button
        android:id="@+id/btnResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtRespuesta"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="134dp"
        android:text="@string/Resutlados"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="267dp"
        android:layout_alignLeft="@+id/txtRespuesta" />

    <TextView
        android:id="@+id/lblAciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/aciertos"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="367dp"
        android:textSize="25dp"/>



</RelativeLayout>